# format-chrome-trace

./: pyproject.toml  pysigrok_chrome_trace.py
