[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysigrok-format-chrome-trace"
authors = [{name = "Scott Shawcroft", email = "scott@tannewt.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/pysigrok/format-chrome-trace"

[tool.flit.module]
name = "pysigrok_chrome_trace"

[project.entry-points."pysigrok.output_format"]
vcd = "pysigrok_chrome_trace:ChromeTraceOutput"
